# wasm-bindgen

./: Cargo.toml  index.js  webpack.config.js
src/: lib copy.rs  lib.rs
